update layout & delete table resevere

--- a/blog-standard.html
+++ b/blog-standard.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -135,11 +135,8 @@
                   </div><!-- /.post-meta-cat -->
                   <span class="post__meta-comments-count">Comments: <span class="color-theme">2</span></span>
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="#">Healthy & Simple Recipes That Are Perfect for Spring</a></h4>
-                <p class="post__desc">We’ve all been dying to know which type of magic the Gaines would bring to the
-                  café, a landmark on Waco’s bustling traffic circle that closed down in February of 2016. The Fixer
-                  Upper stars’ Magnolia brand, which includes the Magnolia Market, a premium interior paint line, a
-                  bakery, and a quarterly home magazine, has already reshaped the culture and perception of Waco, Texas.
+                <h4 class="post__title"><a href="#">Bloc</a></h4>
+                <p class="post__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo dolor, quibusdam, laborum sunt assumenda alias ab corrupti unde velit quae facere! Enim animi labore minima perspiciatis expedita repellat, dicta adipisci.
                 </p>
                 <a href="#" class="btn btn__link btn__secondary">Read More</a>
               </div><!-- /.post-content -->
@@ -159,11 +156,8 @@
                   </div><!-- /.post-meta-cat -->
                   <span class="post__meta-comments-count">Comments: <span class="color-theme">5</span></span>
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="#">What do chefs cook when they have friends over for</a></h4>
-                <p class="post__desc">We’ve all been dying to know which type of magic the Gaines would bring to the
-                  café, a landmark on Waco’s bustling traffic circle that closed down in February of 2016. The Fixer
-                  Upper stars’ Magnolia brand, which includes the Magnolia Market, a premium interior paint line, a
-                  bakery, and a quarterly home magazine, has already reshaped the culture and perception of Waco, Texas.
+                <h4 class="post__title"><a href="#">Blog Title</a></h4>
+                <p class="post__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim voluptatem illum sequi tempore quaerat ratione, quam quasi vel dignissimos? Maiores voluptas repudiandae dicta aliquid vitae sed molestiae sint, fugiat corrupti?
                 </p>
                 <a href="#" class="btn btn__link btn__secondary">Read More</a>
               </div><!-- /.post-content -->
@@ -183,11 +177,8 @@
                   </div><!-- /.post-meta-cat -->
                   <span class="post__meta-comments-count">Comments: <span class="color-theme">5</span></span>
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="#">What do chefs cook when they have friends over for dinner?</a></h4>
-                <p class="post__desc">We’ve all been dying to know which type of magic the Gaines would bring to the
-                  café, a landmark on Waco’s bustling traffic circle that closed down in February of 2016. The Fixer
-                  Upper stars’ Magnolia brand, which includes the Magnolia Market, a premium interior paint line, a
-                  bakery, and a quarterly home magazine, has already reshaped the culture and perception of Waco, Texas.
+                <h4 class="post__title"><a href="#">Blog Title</a></h4>
+                <p class="post__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia atque, eligendi sequi sint, ab facere labore omnis, iure a vitae laudantium quo. Quasi neque repellat vel dolorum aperiam cum obcaecati.
                 </p>
                 <a href="#" class="btn btn__link btn__secondary">Read More</a>
               </div><!-- /.post-content -->
@@ -207,11 +198,9 @@
                   </div><!-- /.post-meta-cat -->
                   <span class="post__meta-comments-count">Comments: <span class="color-theme">1</span></span>
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="#">Desserts With Cream Cheese Frosting Taste of Home</a></h4>
-                <p class="post__desc">We’ve all been dying to know which type of magic the Gaines would bring to the
-                  café, a landmark on Waco’s bustling traffic circle that closed down in February of 2016. The Fixer
-                  Upper stars’ Magnolia brand, which includes the Magnolia Market, a premium interior paint line, a
-                  bakery, and a quarterly home magazine, has already reshaped the culture and perception of Waco, Texas.
+                <h4 class="post__title"><a href="#">Blog Title</a></h4>
+                <p class="post__desc">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam praesentium possimus fugiat suscipit non perspiciatis! Repellendus corrupti, explicabo debitis aut optio veritatis sapiente ducimus molestias saepe quos, soluta laborum cum.
                 </p>
                 <a href="#" class="btn btn__link btn__secondary">Read More</a>
               </div><!-- /.post-content -->
@@ -258,7 +247,7 @@
                     </div><!-- /.widget-post-img -->
                     <div class="widget__post-content">
                       <span class="widget__post-date">Oct 23, 2020</span>
-                      <h6 class="widget__post-title"><a href="#">Tiny Apple Pies with Cinnamon Buns for Two</a></h6>
+                      <h6 class="widget__post-title"><a href="#">Title Blog</a></h6>
                     </div><!-- /.widget-post-content -->
                   </div><!-- /.widget-post-item -->
                   <!-- post item #2 -->
@@ -268,8 +257,7 @@
                     </div><!-- /.widget-post-img -->
                     <div class="widget__post-content">
                       <span class="widget__post-date">Oct 7, 2020</span>
-                      <h6 class="widget__post-title"><a href="#">Healthy & Simple Recipes That Are Perfect for
-                          Spring</a></h6>
+                      <h6 class="widget__post-title"><a href="#">title Blog</a></h6>
                     </div><!-- /.widget-post-content -->
                   </div><!-- /.widget-post-item -->
                 </div><!-- /.widget-content -->
