--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -131,16 +131,13 @@
           <div class="col-sm-12 col-md-12 col-lg-6">
             <div class="row">
               <div class="col-sm-12 col-md-12 col-lg-12">
-                <p>Babette was the first restaurant to open in Egypt, the resturant was designed with the history in
-                  mind we
-                  have created a soft industrial dining room, combined with an open kitchen, coffee take out bar and on
-                  site coffee roastery.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur repellendus debitis excepturi eligendi? Excepturi dignissimos rem officiis voluptas eaque atque, nam dolorem tenetur ducimus beatae omnis neque error natus deleniti.</p>
               </div><!-- /.col-lg-12 -->
               <div class="col-sm-6 col-md-6 col-lg-6">
                 <div class="contact-box">
                   <h6 class="contact__box-title">Our Address</h6>
                   <ul class="contact__box-list list-unstyled">
-                    <li>22 Alnahas Building, 2 AlBahr St, Tanta Al-Gharbia Governorate, Egypt</li>
+                    <li>Address Here</li>
                   </ul>
                   <a href="#" class="btn btn__link">Get Directions</a>
                 </div><!-- /.contact-box -->
@@ -159,7 +156,7 @@
                 <div class="contact-box">
                   <h6 class="contact__box-title">Our Email</h6>
                   <ul class="contact__box-list list-unstyled">
-                    <li><span>Main Email:</span><a href="mailto:Babette@7oroof.com">Babette@7oroof.com</a></li>
+                    <li><span>Main Email:</span><a href="mailto:Babette@7oroof.com">email@7oroof.com</a></li>
                     <li><span>Phone:</span><a href="tel:020101236547">02 0101236547</a></li>
                   </ul>
                   <a href="#" class="btn btn__link">Send a Message</a>
