--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -126,8 +126,7 @@
                   <span class="post__meta-date">Jan 20, 2020 - Jan 23, 2020</span>
                   <div class="post__meta-tag"><span>Tickets Available</span></div><!-- /.post-meta-cat -->
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="event-single.html">Vegan Festival at Pushkar Cocktail Bar and
-                    Dining</a></h4>
+                <h4 class="post__title"><a href="event-single.html">Event Title</a></h4>
               </div><!-- /.post__content -->
             </div><!-- /.post-item -->
           </div><!-- /.col-lg-4 -->
@@ -144,8 +143,7 @@
                   <span class="post__meta-date">Mar 18, 2020 - Mar 21, 2020</span>
                   <div class="post__meta-tag"><span>Tickets Available</span></div><!-- /.post-meta-cat -->
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="event-single.html">Valentine's dinner at Birming Museum and Art
-                    Gallery</a></h4>
+                <h4 class="post__title"><a href="event-single.html">Event Title</a></h4>
               </div><!-- /.post__content -->
             </div><!-- /.post-item -->
           </div><!-- /.col-lg-4 -->
@@ -162,7 +160,7 @@
                   <span class="post__meta-date">Apr 3, 2020 - Apr 7, 2020</span>
                   <div class="post__meta-tag"><span>Tickets Available</span></div><!-- /.post-meta-cat -->
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="event-single.html">Brindleyplace Fine Harborne Farmers' Market Food</a>
+                <h4 class="post__title"><a href="event-single.html">Event Title</a>
                 </h4>
               </div><!-- /.post__content -->
             </div><!-- /.post-item -->
@@ -180,7 +178,7 @@
                   <span class="post__meta-date">july 12, 2020 - july 16, 2020</span>
                   <div class="post__meta-tag"><span>Tickets Available</span></div><!-- /.post-meta-cat -->
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="event-single.html">Supa Dupa Brunch with Bey Ace Hotel London</a></h4>
+                <h4 class="post__title"><a href="event-single.html">Event Title</a></h4>
               </div><!-- /.post__content -->
             </div><!-- /.post-item -->
           </div><!-- /.col-lg-4 -->
@@ -197,8 +195,7 @@
                   <span class="post__meta-date">Oct 27, 2020 - Oct 30, 2020</span>
                   <div class="post__meta-tag"><span>Tickets Available</span></div><!-- /.post-meta-cat -->
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="event-single.html">Sunday Steak Roast hanger & cellarfrom £35 for
-                    people</a></h4>
+                <h4 class="post__title"><a href="event-single.html">Event Title</a></h4>
               </div><!-- /.post__content -->
             </div><!-- /.post-item -->
           </div><!-- /.col-lg-4 -->
@@ -215,8 +212,7 @@
                   <span class="post__meta-date">Nov 14, 2020 - Nov 19, 2020</span>
                   <div class="post__meta-tag sold-out"><span>Sold Out</span></div><!-- /.post-meta-cat -->
                 </div><!-- /.post-meta -->
-                <h4 class="post__title"><a href="event-single.html">Bottomless Bubbles Brunch Launch at French
-                    Corner</a></h4>
+                <h4 class="post__title"><a href="event-single.html">Event Titler</a></h4>
               </div><!-- /.post__content -->
             </div><!-- /.post-item -->
           </div><!-- /.col-lg-4 -->
