--- a/menu-board.html
+++ b/menu-board.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -124,8 +124,7 @@
                     transform="translate(-505 -925)"></path>
                 </svg>
               </div>
-              <p class="heading__desc">Even if you're not a great chef, there's nothing to stop you understanding
-                the difference between what tastes good and what doesn't.</p>
+              <p class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia id iusto doloribus perferendis voluptatibus repellendus eligendi voluptate quam ad porro. Voluptatum eius animi maxime sint aperiam sunt reiciendis laudantium quibusdam!</p>
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
         </div><!-- /.row -->
