--- a/our-chefs.html
+++ b/our-chefs.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -116,9 +116,7 @@
           <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
             <div class="heading heading-layout2 text-center mb-40">
               <h2 class="heading__title">Our Talented Chefs</h2>
-              <p class="heading__desc">Babette was the first restaurant to open in Egypt, the resturant was designed
-                with the history in mind we have created a soft industrial dining room, combined with an open kitchen,
-                coffee take out bar and alovely awesome on site coffee roastery.</p>
+              <p class="heading__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt, quibusdam non facere dolores laudantium laboriosam necessitatibus natus odio officiis tempora unde, perspiciatis libero repellendus ex! Doloremque dignissimos commodi vero asperiores.</p>
               <img src="assets/images/about/signature.png" alt="about">
             </div><!-- /.heading -->
           </div><!-- /.col-lg-6 -->
@@ -140,7 +138,7 @@
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">Kevin Dawn</h5>
+                <h5 class="member__name">Name</h5>
                 <p class="member__desc">CEO & Founder</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
@@ -161,7 +159,7 @@
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">Marian Peterson</h5>
+                <h5 class="member__name">name</h5>
                 <p class="member__desc">Master Chef</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
@@ -182,7 +180,7 @@
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">James Wane</h5>
+                <h5 class="member__name">Name</h5>
                 <p class="member__desc">Thai Master Chef</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
@@ -203,7 +201,7 @@
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">Madlien Smith</h5>
+                <h5 class="member__name">Name</h5>
                 <p class="member__desc">Chinese Master Chef</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
@@ -224,7 +222,7 @@
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">Martin Hope</h5>
+                <h5 class="member__name">Name</h5>
                 <p class="member__desc">Chef Assistant</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
@@ -245,7 +243,7 @@
                 </div><!-- /.member-hover -->
               </div><!-- /.member-img -->
               <div class="member__info">
-                <h5 class="member__name">Jennifer Tom</h5>
+                <h5 class="member__name">Name</h5>
                 <p class="member__desc">Kitchen Care</p>
               </div><!-- /.member-info -->
             </div><!-- /.member -->
@@ -294,8 +292,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Lovely atmosphere staff were excellent, very attentive and polite. We
-                    felt taken care of! Food came out quickly and was hot and delicious.”</p>
+                  <p class="testimonial__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor, repellendus ipsum in cumque eos facilis. Facilis, fuga deserunt rem quisquam, sed voluptate assumenda, quasi autem natus consectetur accusamus iste sunt?</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">John Peter</h5>
@@ -316,8 +313,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Been to this stunning place many times over the last years. Tonight I
-                    have to say, it was good as it ever was. Superb food, exceedingly good staff.”</p>
+                  <p class="testimonial__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus itaque nemo, ipsam ad quidem qui accusamus. Molestias eum sapiente minus quos blanditiis quisquam modi iure ipsum, numquam id distinctio corporis?</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Sami Wade</h5>
@@ -338,8 +334,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Once again, I feel compelled to write about our wonderful dining
-                    experience. We have shared meals or conversations about our meals at your restaurant.”</p>
+                  <p class="testimonial__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae consectetur, neque expedita delectus fugiat quidem dolorem laborum quos tempora, nihil distinctio, quisquam et sequi id ducimus eaque quod eum cum.</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Martin Hope</h5>
@@ -360,8 +355,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Lovely atmosphere staff were excellent, very attentive and polite. We
-                    felt taken care of! Food came out quickly and was hot and delicious.”</p>
+                  <p class="testimonial__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum minus iste temporibus accusamus ullam doloribus quod voluptatem facilis, deserunt labore? Fugit, ullam veniam beatae accusantium dolorum itaque ipsa id tempora.”</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">John Peter</h5>
@@ -382,8 +376,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Been to this stunning place many times over the last years. Tonight I
-                    have to say, it was good as it ever was. Superb food, exceedingly good staff.”</p>
+                  <p class="testimonial__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis aliquam id at quidem porro, omnis tempore nam alias optio sapiente beatae fugit est dignissimos non necessitatibus? Minima non omnis nobis.</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Sami Wade</h5>
@@ -404,8 +397,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Once again, I feel compelled to write about our wonderful dining
-                    experience. We have shared meals or conversations about our meals at your restaurant.”</p>
+                  <p class="testimonial__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam eligendi cupiditate temporibus nobis, ipsum sint minima non sit! Porro molestiae tempora ab fuga iusto odio iure error quis sit soluta.</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Martin Hope</h5>
@@ -430,7 +422,7 @@
                 <div class="banner__content-text-inner">
                   <div class="heading">
                     <span class="heading__subtitle">Hello Dear</span>
-                    <h2 class="heading__title">Welcome To Babette</h2>
+                    <h2 class="heading__title">Welcome To LisaBB</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -438,10 +430,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Babette was the first restaurant to open in Egypt, the resturant was
-                      designed
-                      with the history in mind we have created a soft industrial dining room, combined with an open
-                      kitchen, coffee take out bar and alovely awesome on site coffee roastery..</p>
+                    <p class="heading__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita et sequi fugiat ut, quasi ad dolorem quo eum doloremque pariatur in itaque similique tempora excepturi consectetur. Molestiae dolorem sunt eum.</p>
                     <img src="assets/images/about/signature.png" alt="signature">
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
