--- a/our-guestbook.html
+++ b/our-guestbook.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -119,7 +119,7 @@
                 <div class="banner__content-text-inner">
                   <div class="heading">
                     <span class="heading__subtitle">Hello Dear</span>
-                    <h2 class="heading__title">Welcome To Babette</h2>
+                    <h2 class="heading__title">Welcome To LisaBB</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -127,10 +127,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Babette was the first restaurant to open in Egypt, the resturant was
-                      designed
-                      with the history in mind we have created a soft industrial dining room, combined with an open
-                      kitchen, coffee take out bar and alovely awesome on site coffee roastery..</p>
+                    <p class="heading__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores odio magni explicabo a nostrum repudiandae placeat deserunt consectetur. Ex sint fuga vitae dolore qui, quisquam nisi saepe nostrum numquam dicta.</p>
                     <img src="assets/images/about/signature.png" alt="signature">
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
@@ -184,8 +181,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Lovely atmosphere staff were excellent, very attentive and polite. We
-                    felt taken care of! Food came out quickly and was hot and delicious.”</p>
+                  <p class="testimonial__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos voluptates perferendis debitis, dolores iste, soluta adipisci eveniet minus et ipsam sed neque iure enim laborum perspiciatis accusamus, eius obcaecati delectus.</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">John Peter</h5>
@@ -206,8 +202,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Been to this stunning place many times over the last years. Tonight I
-                    have to say, it was good as it ever was. Superb food, exceedingly good staff.”</p>
+                  <p class="testimonial__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas debitis iusto hic expedita enim odio, officiis reiciendis facere tempora officia mollitia magni reprehenderit voluptate autem, omnis eveniet eos ratione architecto.</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Sami Wade</h5>
@@ -228,8 +223,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Once again, I feel compelled to write about our wonderful dining
-                    experience. We have shared meals or conversations about our meals at your restaurant.”</p>
+                  <p class="testimonial__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet reiciendis unde magnam soluta architecto deleniti eaque harum, est sit ratione! Quas nisi debitis quibusdam consequatur, iure et deserunt magni harum?</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Martin Hope</h5>
@@ -250,8 +244,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Lovely atmosphere staff were excellent, very attentive and polite. We
-                    felt taken care of! Food came out quickly and was hot and delicious.”</p>
+                  <p class="testimonial__desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi autem exercitationem maiores. Magnam, et similique. Consequatur corporis voluptatum illo mollitia labore, sed maxime, nostrum vero doloribus tenetur minus. Dolorum, impedit!</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">John Peter</h5>
@@ -272,8 +265,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Been to this stunning place many times over the last years. Tonight I
-                    have to say, it was good as it ever was. Superb food, exceedingly good staff.”</p>
+                  <p class="testimonial__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias vitae, tempore voluptatum, molestiae quod dolorem suscipit sit quaerat obcaecati adipisci perferendis voluptatibus quo quae nisi dolores quisquam quibusdam ea ex.</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Sami Wade</h5>
@@ -294,8 +286,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Once again, I feel compelled to write about our wonderful dining
-                    experience. We have shared meals or conversations about our meals at your restaurant.”</p>
+                  <p class="testimonial__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti neque aliquam itaque et, debitis nobis a, fugit atque modi reprehenderit illum praesentium numquam qui quaerat quisquam mollitia. Sapiente, dicta.</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Martin Hope</h5>
@@ -328,9 +319,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Allow us to make your next special event extra special. We cater for all
-                      sized functions, ideal for your larger functions or an intimate gathering, our team can curate a
-                      menu to suit your taste.</p>
+                    <p class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores saepe rem deserunt est soluta omnis nihil, voluptatibus cumque corporis distinctio quam vitae magni porro nulla fugit, aliquid perferendis? Qui, quam!</p>
                   </div><!-- /.heading -->
                   <a href="#" class="btn btn__secondary btn__link mx-2 my-1">Explore Events</a>
                   <a href="#" class="btn btn__primary mx-2 my-1">Explore Events</a>
