--- a/shop-single-product.html
+++ b/shop-single-product.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -134,9 +134,7 @@
             <span class="product__price">$ 18.00</span>
             <hr class="hr-dashed mt-30 mb-30">
             <div class="product__desc">
-              <p>We’ve all been dying to know which type of magic the Gaines would bring to the café, a landmark on
-                Waco’s bustling traffic circle that closed down in February of 2016. The Fixer Upper stars’ Magnolia
-                brand, which includes the Magnolia Market, a premium interior paint line, and a quarterly home.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sed iure doloremque incidunt deserunt! Minus illo, dolore ea a commodi velit nam soluta voluptates omnis quo consequatur laboriosam quidem! Quas?</p>
             </div><!-- /.product-desc -->
             <form class="product__form-wrap mb-30">
               <div class="product__quantity d-flex">
@@ -183,26 +181,11 @@
               </nav>
               <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="Description">
-                  <p>The restaurant itself is literally one big giant kitchen. When we first got in there, it was all
-                    the things you can imagine—dingy, musky. But if I took you in there today, you’d be like ‘Oh! This
-                    is so clean, everything smells so great.’ Those are a few benefits of a little bit of elbow grease
-                    and hard work on the front end.” As Chip’s vision has come to fruition, he’s garnered a lot more
-                    support. We’ve all been dying to know which type of magic the Gaines would bring to the café, a
-                    landmark on Waco’s bustling traffic circle.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quas quidem facilis fugiat tempore deleniti animi pariatur natus! Sequi, enim. Corrupti porro repellendus veritatis aliquam eligendi amet maxime tenetur temporibus.</p>
                 </div><!-- /.desc-tab -->
                 <div class="tab-pane fade" id="Details">
-                  <p>The restaurant itself is literally one big giant kitchen. When we first got in there, it was all
-                    the things you can imagine—dingy, musky. But if I took you in there today, you’d be like ‘Oh! This
-                    is so clean, everything smells so great.’ Those are a few benefits of a little bit of elbow grease
-                    and hard work on the front end.” As Chip’s vision has come to fruition, he’s garnered a lot more
-                    support. We’ve all been dying to know which type of magic the Gaines would bring to the café, a
-                    landmark on Waco’s bustling traffic circle.</p>
-                  <p>The restaurant itself is literally one big giant kitchen. When we first got in there, it was all
-                    the things you can imagine—dingy, musky. But if I took you in there today, you’d be like ‘Oh! This
-                    is so clean, everything smells so great.’ Those are a few benefits of a little bit of elbow grease
-                    and hard work on the front end.” As Chip’s vision has come to fruition, he’s garnered a lot more
-                    support. We’ve all been dying to know which type of magic the Gaines would bring to the café, a
-                    landmark on Waco’s bustling traffic circle.</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In sed voluptatum eligendi accusamus similique ratione, vel repellat doloremque, natus laudantium placeat. Dolorem quae aliquam quo alias ipsum ea, a excepturi.</p>
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi rem consectetur id voluptatibus ut mollitia sunt? Enim, aperiam odit. Id minus totam praesentium accusamus dolor architecto nihil provident qui molestiae?</p>
                 </div><!-- /.details-tab -->
                 <div class="tab-pane fade" id="Reviews">
                   <form class="row reviews__form">
