--- a/faqs.html
+++ b/faqs.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -211,82 +211,7 @@
     <!-- ========================
        Text Banner layout 1
     =========================== -->
-    <section id="textBanner"
-      class="text-banner text-banner-layout1 text-center bg-overlay bg-overlay-gradient bg-parallax">
-      <div class="bg-img"><img src="assets/images/backgrounds/6.jpg" alt="background"></div>
-      <svg class="divider-shape" xmlns="http://www.w3.org/2000/svg" width="142" height="17" viewBox="0 0 142 17">
-        <path
-          d="M800,600V583c8.782,15.985,46.811,11.315,56,12a35.721,35.721,0,0,1,15,5m-71,0V583c-8.782,15.985-46.811,11.315-56,12a35.717,35.717,0,0,0-15,5"
-          transform="translate(-729 -583)"></path>
-      </svg>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-12">
-            <span class="banner__subtitle">Book Your Table</span>
-            <h2 class="banner__title">Make A Reservation</h2>
-          </div><!-- /.col-lg-12 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section><!-- /.textBanner layout 1 -->
-
-    <!-- ========================
-      Reservation
-    =========================== -->
-    <section id="reservation" class="reservation">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
-            <div class="heading text-center mb-30">
-              <p class="heading__desc">You can book a table online easily in just a minute. Reservations are for lunch
-                and dinner, check the availability of your table & book it now!</p>
-            </div><!-- /.heading -->
-          </div><!-- /.col-lg-6 -->
-        </div><!-- /.row -->
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-8 offset-lg-2">
-            <form>
-              <div class="row">
-                <div class="col-sm-4 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <select class="form-control">
-                      <option value="2">2 people</option>
-                      <option value="3">3 people</option>
-                      <option value="4">4 people</option>
-                      <option value="5">5 people</option>
-                      <option value="6">6 people</option>
-                      <option value="7">7 people</option>
-                    </select>
-                  </div>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-4 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <select class="form-control">
-                      <option value="23">March 23, 2020</option>
-                      <option value="24">March 24, 2020</option>
-                      <option value="25">March 25, 2020</option>
-                      <option value="26">March 26, 2020</option>
-                    </select>
-                  </div>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-4 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <select class="form-control">
-                      <option value="8">8:00 PM</option>
-                      <option value="9">9:00 PM</option>
-                      <option value="10">10:00 PM</option>
-                      <option value="11">11:00 PM</option>
-                    </select>
-                  </div>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                  <button type="submit" class="btn btn__primary btn__block">Find A Table</button>
-                </div><!-- /.col-lg-12 -->
-              </div><!-- /.row -->
-            </form>
-          </div><!-- /.col-lg-8 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section><!-- /.Reservation -->
+   
 
     <!-- ========================
       Footer
