--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -97,15 +97,15 @@
               <img src="assets/images/logo/logo-xl.png" alt="logo" class="img-fluid">
             </div><!-- /.hero__banner-img -->
             <div class="hero__banner-categories d-flex justify-content-center">
-              <a href="menu-classic.html" class="cat__item">
+              <a href="#" class="cat__item">
                 <img src="assets/images/icons/7.png" alt="categorey">
                 <span class="cat__item-title">Deserts</span>
               </a><!-- /.cat__item-->
-              <a href="menu-mixed.html" class="cat__item">
+              <a href="#" class="cat__item">
                 <img src="assets/images/icons/8.png" alt="categorey">
                 <span class="cat__item-title">Specials</span>
               </a><!-- /.cat__item-->
-              <a href="menu-gallery.html" class="cat__item">
+              <a href="#" class="cat__item">
                 <img src="assets/images/icons/9.png" alt="categorey">
                 <span class="cat__item-title">Drinks</span>
               </a><!-- /.cat__item-->
@@ -131,8 +131,8 @@
               <div class="banner__content-text" data-aos="fade-right">
                 <div class="banner__content-text-inner">
                   <div class="heading">
-                    <span class="heading__subtitle">Hello Dear</span>
-                    <h2 class="heading__title">Welcome To Babette</h2>
+                    <span class="heading__subtitle">Welcome text</span>
+                    <h2 class="heading__title">Store Title</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -140,10 +140,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Babette was the first restaurant to open in Egypt, the resturant was
-                      designed
-                      with the history in mind we have created a soft industrial dining room, combined with an open
-                      kitchen, coffee take out bar and alovely awesome on site coffee roastery..</p>
+                    <p class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, ex blanditiis provident quia quas quos inventore unde repudiandae vitae nostrum nihil minima consequatur ratione iure obcaecati incidunt omnis magnam delectus.</p>
                     <img src="assets/images/about/signature.png" alt="signature">
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
@@ -171,7 +168,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12">
-            <span class="banner__subtitle">Starts At 11:00 am</span>
+            <span class="banner__subtitle">Starts At {open-time}</span>
             <h2 class="banner__title">Breakfast Menu</h2>
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
@@ -190,8 +187,8 @@
               <div class="banner__content-text" data-aos="fade-left">
                 <div class="banner__content-text-inner">
                   <div class="heading mb-40">
-                    <span class="heading__subtitle">A Warm, Charming Atmosphere</span>
-                    <h2 class="heading__title">Private Dining & Events</h2>
+                    <span class="heading__subtitle">Slogan here</span>
+                    <h2 class="heading__title">Title text</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -199,9 +196,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Allow us to make your next special event extra special. We cater for all
-                      sized functions, ideal for your larger functions or an intimate gathering, our team can curate a
-                      menu to suit your taste.</p>
+                    <p class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptas, nobis nam rerum esse vitae placeat asperiores vero autem eos architecto, impedit deleniti nisi cumque fugit laboriosam sint neque unde!</p>
                   </div><!-- /.heading -->
                   <a href="#" class="btn btn__secondary btn__link mx-2 my-1">Explore Events</a>
                   <a href="#" class="btn btn__primary mx-2 my-1">Explore Events</a>
@@ -230,8 +225,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-12">
-            <span class="banner__subtitle">Hot And Ready To Serve</span>
-            <h2 class="banner__title">Talented Chefs</h2>
+            <span class="banner__subtitle">Slogan text</span>
+            <h2 class="banner__title">Title text</h2>
           </div><!-- /.col-lg-12 -->
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -248,8 +243,8 @@
               <div class="banner__content-text" data-aos="fade-right">
                 <div class="banner__content-text-inner">
                   <div class="heading mb-40">
-                    <span class="heading__subtitle">Our Favourites</span>
-                    <h2 class="heading__title">Discover Our Menu</h2>
+                    <span class="heading__subtitle">Slogan text</span>
+                    <h2 class="heading__title">Title text</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -257,9 +252,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Everyone has taste, even if they don't realize it. Even if you're not a
-                      great chef, there's nothing to stop you understanding the difference between what tastes good and
-                      what doesn't.</p>
+                    <p style="margin-bottom: 15px;" class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit.off praesentium, fugiat sunt enim repellendus.</p>
                     <a href="#" class="btn btn__secondary">Explore Full Menu</a>
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
