--- a/our-story.html
+++ b/our-story.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="description" content="Babette">
   <link href="assets/images/favicon/favicon.png" rel="icon">
-  <title>Optikey</title>
+  <title>LisaBB</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Rubik:400,500,700%7cShadows+Into+Light&display=swap">
   <link rel="stylesheet" href="assets/css/libraries.css" />
@@ -118,7 +118,7 @@
                 <div class="banner__content-text-inner">
                   <div class="heading">
                     <span class="heading__subtitle">Hello Dear</span>
-                    <h2 class="heading__title">Welcome To Babette</h2>
+                    <h2 class="heading__title">Welcome To LisaBB</h2>
                     <div class="heading__icon">
                       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
                         <path
@@ -126,10 +126,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Babette was the first restaurant to open in Egypt, the resturant was
-                      designed
-                      with the history in mind we have created a soft industrial dining room, combined with an open
-                      kitchen, coffee take out bar and alovely awesome on site coffee roastery..</p>
+                    <p class="heading__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, voluptatem reiciendis tenetur alias quas neque minima repellendus obcaecati quisquam consectetur quam ut. Deserunt voluptatum molestiae expedita similique nulla nam totam?</p>
                     <img src="assets/images/about/signature.png" alt="signature">
                   </div><!-- /.heading -->
                 </div><!-- /.banner__content-text-inner -->
@@ -163,9 +160,7 @@
                           transform="translate(-505 -925)"></path>
                       </svg>
                     </div>
-                    <p class="heading__desc">Allow us to make your next special event extra special. We cater for all
-                      sized functions, ideal for your larger functions or an intimate gathering, our team can curate a
-                      menu to suit your taste.</p>
+                    <p class="heading__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, velit aliquam soluta dicta ullam dignissimos vero natus pariatur sapiente consectetur, cum fuga officiis harum perspiciatis, quo eos? Explicabo, officiis quia?</p>
                   </div><!-- /.heading -->
                   <a href="#" class="btn btn__secondary btn__link mx-2 my-1">Explore Events</a>
                   <a href="#" class="btn btn__primary mx-2 my-1">Explore Events</a>
@@ -220,8 +215,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Lovely atmosphere staff were excellent, very attentive and polite. We
-                    felt taken care of! Food came out quickly and was hot and delicious.”</p>
+                  <p class="testimonial__desc">“Description text”</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">John Peter</h5>
@@ -242,8 +236,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Been to this stunning place many times over the last years. Tonight I
-                    have to say, it was good as it ever was. Superb food, exceedingly good staff.”</p>
+                  <p class="testimonial__desc">“Description Text”</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Sami Wade</h5>
@@ -264,8 +257,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Once again, I feel compelled to write about our wonderful dining
-                    experience. We have shared meals or conversations about our meals at your restaurant.”</p>
+                  <p class="testimonial__desc">“Description Text ”</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Martin Hope</h5>
@@ -286,8 +278,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Lovely atmosphere staff were excellent, very attentive and polite. We
-                    felt taken care of! Food came out quickly and was hot and delicious.”</p>
+                  <p class="testimonial__desc">“Description Text”</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">John Peter</h5>
@@ -308,8 +299,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Been to this stunning place many times over the last years. Tonight I
-                    have to say, it was good as it ever was. Superb food, exceedingly good staff.”</p>
+                  <p class="testimonial__desc">“Description Text”</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Sami Wade</h5>
@@ -330,8 +320,7 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                   </div><!-- /.testimonial-rating -->
-                  <p class="testimonial__desc">“Once again, I feel compelled to write about our wonderful dining
-                    experience. We have shared meals or conversations about our meals at your restaurant.”</p>
+                  <p class="testimonial__desc">“Description Text”</p>
                 </div><!-- /.testimonial-content -->
                 <div class="testimonial__meta">
                   <h5 class="testimonial__meta-title">Martin Hope</h5>
@@ -358,8 +347,7 @@
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
                 <h4 class="fancybox__title">Daily Fresh Menus</h4>
-                <p class="fancybox__desc">We help you treat yourself with a different meal everyday, thanks to our daily
-                  changing menus and our awesome creative chefs!</p>
+                <p class="fancybox__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas soluta laudantium explicabo quasi vero repellendus veritatis a debitis, magnam rerum dolorum optio illum enim et in harum ratione quod rem?</p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -371,8 +359,8 @@
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
                 <h4 class="fancybox__title">Fresh Ingredient</h4>
-                <p class="fancybox__desc">Who said healthy food can't also be delicious? Our creative chefs use fresh
-                  and seasonal ingredients to make affordable, tasty</p>
+                <p class="fancybox__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque illo, ducimus consectetur deserunt, esse, natus repellat voluptatum ut exercitationem dolor dolorem! Laboriosam sed provident modi, eos aliquam vel porro mollitia.
+                </p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -384,8 +372,7 @@
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
                 <h4 class="fancybox__title">Tasty Meals</h4>
-                <p class="fancybox__desc">We help you treat yourself with a different meal everyday, thanks to our daily
-                  changing menus and our awesome creative chefs!</p>
+                <p class="fancybox__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus accusantium distinctio culpa praesentium dolorem! Corporis, accusantium odit! Maxime excepturi nulla deleniti, ipsam alias porro odit id. Reprehenderit sint beatae quidem?</p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -397,8 +384,7 @@
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
                 <h4 class="fancybox__title">Creative Chef</h4>
-                <p class="fancybox__desc">Who said healthy food can't also be delicious? Our creative chefs use fresh
-                  and seasonal ingredients to make affordable, tasty</p>
+                <p class="fancybox__desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate cum perferendis dolorem sed non officia ipsa vel ratione nihil architecto ad, dolores, et vitae, repellendus possimus corrupti praesentium molestias dolorum!</p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -410,8 +396,8 @@
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
                 <h4 class="fancybox__title">Real Pizza</h4>
-                <p class="fancybox__desc">We help you treat yourself with a different meal everyday, thanks to our daily
-                  changing menus and our awesome creative chefs!</p>
+                <p class="fancybox__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, ducimus. Molestias temporibus nulla error unde laudantium maiores, numquam sit quod fugiat atque suscipit nam inventore earum optio iusto quae. Nobis? 
+                </p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -423,8 +409,7 @@
               </div><!-- /.fancybox-icon -->
               <div class="fancybox__content">
                 <h4 class="fancybox__title">Awesome Coffee</h4>
-                <p class="fancybox__desc">Who said healthy food can't also be delicious? Our creative chefs use fresh
-                  and seasonal ingredients to make affordable, tasty</p>
+                <p class="fancybox__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt soluta repudiandae quas exercitationem. Recusandae itaque necessitatibus autem saepe in! Pariatur deleniti iusto provident? Fugit iure perferendis nostrum illum quae minus.</p>
               </div><!-- /.fancybox-content -->
             </div><!-- /.fancybox-item -->
           </div><!-- /.col-lg-4 -->
@@ -435,82 +420,7 @@
     <!-- ========================
        Text Banner layout 1
     =========================== -->
-    <section id="textBanner"
-      class="text-banner text-banner-layout1 text-center bg-overlay bg-overlay-gradient bg-parallax">
-      <div class="bg-img"><img src="assets/images/backgrounds/6.jpg" alt="background"></div>
-      <svg class="divider-shape" xmlns="http://www.w3.org/2000/svg" width="142" height="17" viewBox="0 0 142 17">
-        <path
-          d="M800,600V583c8.782,15.985,46.811,11.315,56,12a35.721,35.721,0,0,1,15,5m-71,0V583c-8.782,15.985-46.811,11.315-56,12a35.717,35.717,0,0,0-15,5"
-          transform="translate(-729 -583)"></path>
-      </svg>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-12">
-            <span class="banner__subtitle">Book Your Table</span>
-            <h2 class="banner__title">Make A Reservation</h2>
-          </div><!-- /.col-lg-12 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section><!-- /.textBanner layout 1 -->
 
-    <!-- ========================
-      Reservation
-    =========================== -->
-    <section id="reservation" class="reservation">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-3">
-            <div class="heading text-center mb-30">
-              <p class="heading__desc">You can book a table online easily in just a minute. Reservations are for lunch
-                and dinner, check the availability of your table & book it now!</p>
-            </div><!-- /.heading -->
-          </div><!-- /.col-lg-6 -->
-        </div><!-- /.row -->
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-8 offset-lg-2">
-            <form>
-              <div class="row">
-                <div class="col-sm-4 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <select class="form-control">
-                      <option value="2">2 people</option>
-                      <option value="3">3 people</option>
-                      <option value="4">4 people</option>
-                      <option value="5">5 people</option>
-                      <option value="6">6 people</option>
-                      <option value="7">7 people</option>
-                    </select>
-                  </div>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-4 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <select class="form-control">
-                      <option value="23">March 23, 2020</option>
-                      <option value="24">March 24, 2020</option>
-                      <option value="25">March 25, 2020</option>
-                      <option value="26">March 26, 2020</option>
-                    </select>
-                  </div>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-4 col-md-4 col-lg-4">
-                  <div class="form-group">
-                    <select class="form-control">
-                      <option value="8">8:00 PM</option>
-                      <option value="9">9:00 PM</option>
-                      <option value="10">10:00 PM</option>
-                      <option value="11">11:00 PM</option>
-                    </select>
-                  </div>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                  <button type="submit" class="btn btn__primary btn__block">Find A Table</button>
-                </div><!-- /.col-lg-12 -->
-              </div><!-- /.row -->
-            </form>
-          </div><!-- /.col-lg-8 -->
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-    </section><!-- /.Reservation -->
 
     <!-- ========================
       Footer
